pods/mariadb-longhorn-volume.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None




---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mariadb:10.4
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
        
      volumes:
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: mysql-pvc
